# hubrelease

./: .gitignore  Makefile  README.md  git.c  git.h  main.c  meson.build  notes.txt
doc/: hubrelease.1.in  meson.build
hubrelease/: common.h  curl.h  git.c  git.h  github.h  main.c  meson.build  options.c  options.h
src/: common.h  curl.c  curl.h  git.c  git.h  github.c  github.h  main.c  options.c
